test-java/src/main/java/br/com/altbank/test_java/domain/web/errors/exceptions/NotFoundException.java
package br.com.altbank.test_java.domain.web.errors.exceptions;

public class NotFoundException extends RuntimeException {

    private static final long serialVersionUID = 1L;

    public NotFoundException(String mensagem) {
        super(mensagem);
    }
}